CLOSED FIXED 39517
[Qt] GraphicsLayer: The rocket animation doesn't scroll together with the page
https://bugs.webkit.org/show_bug.cgi?id=39517
Summary [Qt] GraphicsLayer: The rocket animation doesn't scroll together with the page
Noam Rosenthal
Reported 2010-05-21 16:28:48 PDT
it only scrolls after the animation is over
Attachments
Fix (1.21 KB, patch)
2010-05-21 16:49 PDT, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2010-05-21 16:49:24 PDT
Kenneth Rohde Christiansen
Comment 2 2010-05-22 08:09:42 PDT
Jesus, your refactoring broke this.
WebKit Commit Bot
Comment 3 2010-05-23 05:10:23 PDT
Comment on attachment 56762 [details] Fix Clearing flags on attachment: 56762 Committed r60041: <http://trac.webkit.org/changeset/60041>
WebKit Commit Bot
Comment 4 2010-05-23 05:10:29 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 5 2010-05-25 01:53:55 PDT
As far as I can see this is a regression introduced in r59152, which appears to have removed the call to updateCompositingScrollPosition(). Since 59152 wasn't cherry-picked into the release branch, the patch for this bug doesn't apply. However pre-59152 - i.e. with what's in the 2.0 branch - the call to updateCompositionScrollPosition() is there but it happens before calling syncLayers(). Is this analysis correct? What's the right thing to do for 2.0? Keep it as is? Move the call to after syncLayers(), like in the trunk?
Kenneth Rohde Christiansen
Comment 6 2010-05-25 05:23:17 PDT
If the rocket animation scrolls together with the page, I say you need to do nothing.
Noam Rosenthal
Comment 7 2010-05-25 07:50:20 PDT
It doesn't matter - the implementations are interchangeable. I agree with Kenneth...
Simon Hausmann
Comment 8 2010-06-07 03:16:16 PDT
Fixed url to testcase
Simon Hausmann
Comment 9 2010-06-07 03:22:19 PDT
(In reply to comment #6) > If the rocket animation scrolls together with the page, I say you need to do nothing. I assume with "scroll together" you mean scrolling the page with the wheel should work fine while the animation is running?
Kenneth Rohde Christiansen
Comment 10 2010-06-07 05:28:30 PDT
(In reply to comment #9) > (In reply to comment #6) > > If the rocket animation scrolls together with the page, I say you need to do nothing. > > I assume with "scroll together" you mean scrolling the page with the wheel should work fine while the animation is running? Exactly.
Simon Hausmann
Comment 11 2010-06-07 07:03:21 PDT
Good, since that worked I'll remove it from the blockers. No picking necessary :)
Note You need to log in before you can comment on or make changes to this bug.