2010-05-23  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayer: The rocket animation doesn't scroll together with the page
        https://bugs.webkit.org/show_bug.cgi?id=39517

        A previous fix to this issue was overridden by the PageClientQt refactor. Reapplying.

        * WebCoreSupport/PageClientQt.cpp:
        (WebCore::PageClientQGraphicsWidget::update):

git-svn-id: svn://svn.chromium.org/blink/trunk@60041 bbb929c8-8fbe-4397-9dbb-9b2b20218538